<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_akun"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/daftar"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun_login_di_sini"
        android:layout_marginTop="16dp"
        android:textColor="#009688"/>

</LinearLayout>