<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akun_saya"
        android:textSize="18sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:layout_marginBottom="32dp"/>

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_person"
        android:padding="10dp"
        android:background="@drawable/circle_background"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memuat_nama"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memuat_email"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/keluar"
        android:backgroundTint="#000000"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

</LinearLayout>