<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTasTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tas_belanja"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvTasTitle"
        android:layout_above="@id/layoutCheckout" />

    <LinearLayout
        android:id="@+id/layoutCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/txtTotalHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_format"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#000000"
            android:text="@string/checkout_sekarang"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>